--- a/src/styles/components/_section.scss
+++ b/src/styles/components/_section.scss
@@ -18,7 +18,7 @@
            display: flex;
            justify-content: space-between;
 
-           .ms-image{
+           .ms-m-image{
                max-width: 545px;
                flex: 1 0 545px;
            }
