--- a/src/styles/components/_cartPage.scss
+++ b/src/styles/components/_cartPage.scss
@@ -43,21 +43,30 @@ h1, .empty-cart{
         }
     }
 
-    @media(min-width: 1024px){
-        .cart-page{
-            display: flex;
-            justify-content: center;
-        }
-        .cart-item{
-            display: flex;
-            justify-content: space-between;
+    .total-container{
+        margin: 2rem;
+        text-align: center;
+    }
+}
 
-            div{
-                margin: 1rem;
-            }
-            .name-price{
-                width: 200px;
-            }
+@media(min-width: 1024px){
+    .cart-page{
+        display: flex;
+        justify-content: center;
+
+        .total-container{
+            text-align: center;
+        }
+    }
+    .cart-item{
+        display: flex;
+        justify-content: space-between;
+
+        div{
+            margin: 1rem;
+        }
+        .name-price{
+            width: 200px;
         }
     }
 }
